--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "private": true,
-  "name": "@mux/mux-player-next",
+  "name": "@mux/mux-player-react-suspense",
   "version": "0.1.0",
-  "description": "A NextJS module for the Mux video player",
-  "repository": "https://github.com/muxinc/nextjs-static-player.git",
+  "description": "The best-loading player this side of the Mississippi",
+  "repository": "https://github.com/muxinc/mux-player-react-suspense.git",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "typesVersions": {
     "*": {
-      "mux-player-next": [
+      "mux-player-react-suspense": [
         "dist/index.d.ts"
       ]
     }
   },
+  "sideEffects": [
+		"*.css"
+	],
   "files": [
     "src",
     "dist"
@@ -33,28 +36,27 @@
     "build": "npm run build:cjs",
     "build:cjs": "tsc",
     "build:example": "cd example && yarn build",
-    "build:all": "yarn run-s build build:example"
+    "build:all": "yarn run-s build build:example",
+    "start:example": "cd example && yarn start"
   },
   "author": "@muxinc",
   "license": "MIT",
   "peerDependencies": {
     "@types/react": "^17.0.0 || ^18",
     "@types/react-dom": "^17.0.0 || ^18",
-    "next": "^11.0.1 || ^12",
     "react": "^17.0.2 || ^18",
     "react-dom": "^17.0.2 || ^18"
   },
   "devDependencies": {
     "@mux/mux-player-react": "^0.1.0-beta.26",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "8.22.0",
-    "next": "12.2.5",
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "4.7.4"
   },
   "prettier": {
