Cleaning up shop
Lots of this functionality is about to move to mux-player

--- a/package.json
+++ b/package.json
@@ -9,20 +9,16 @@
   ],
   "scripts": {
     "format": "prettier --write .",
-    "dev:package:placeholder": "cd packages/placeholder && yarn dev",
-    "dev:package:react": "cd packages/react && yarn dev",
+    "dev:package:blurhash": "cd packages/blurhash && yarn dev",
     "dev:example:nextjs": "cd examples/nextjs && yarn dev",
-    "dev:react": "yarn run-p dev:package:placeholder dev:package:react dev:example:nextjs",
-    "dev:package:svelte": "cd packages/svelte && yarn build --watch",
+    "dev:react": "yarn run-p dev:package:blurhash dev:example:nextjs",
     "dev:example:sveltekit": "cd examples/sveltekit && yarn dev",
-    "dev:svelte": "yarn run-p dev:package:placeholder dev:package:svelte dev:example:sveltekit",
-    "build:package:placeholder": "cd packages/placeholder && yarn build",
-    "build:package:react": "cd packages/react && yarn build",
+    "dev:svelte": "yarn run-p dev:package:blurhash dev:example:sveltekit",
+    "build:package:blurhash": "cd packages/blurhash && yarn build",
     "build:example:nextjs": "cd examples/nextjs && yarn build",
-    "build:react": "yarn run-s build:package:placeholder build:package:react build:example:nextjs",
-    "build:package:svelte": "cd packages/svelte && yarn build",
+    "build:react": "yarn run-s build:package:blurhash build:example:nextjs",
     "build:example:sveltekit": "cd examples/sveltekit && yarn build",
-    "build:svelte": "yarn run-s build:package:placeholder build:package:svelte build:example:sveltekit"
+    "build:svelte": "yarn run-s build:package:blurhash build:example:sveltekit"
   },
   "author": "@muxinc",
   "license": "MIT",
