--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@mux/blurhash": ">=0.1.0",
-    "@mux/mux-player": ">=1.0.0-beta.0",
+    "@mux/mux-player-react": ">=1.0.0",
     "next": "12.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
