--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -12,7 +12,7 @@
 	},
 	"devDependencies": {
 		"@mux/blurhash": ">=0.1.0",
-    "@mux/mux-player": ">=1.0.0-beta.0",
+    "@mux/mux-player": ">=1.0.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
