--- a/packages/blurhash/package.json
+++ b/packages/blurhash/package.json
@@ -1,18 +1,11 @@
 {
   "private": true,
-  "name": "@mux/mux-player-react-lazy",
+  "name": "@mux/blurhash",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "sideEffects": [
-    "*.css"
-  ],
-  "files": [
-    "src",
-    "dist"
-  ],
   "scripts": {
     "lint": "eslint src/*",
     "test": "npm run lint",
@@ -22,21 +15,15 @@
   },
   "author": "@muxinc",
   "license": "MIT",
-  "peerDependencies": {
-    "@types/react": "^17.0.0 || ^18",
-    "@types/react-dom": "^17.0.0 || ^18",
-    "react": "^17.0.2 || ^18",
-    "react-dom": "^17.0.2 || ^18"
-  },
   "devDependencies": {
-    "@mux/mux-player-react": "^0.1.0-beta.28",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/sharp": "^0.30.5",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "8.22.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "typescript": "4.7.4"
+  },
+  "dependencies": {
+    "blurhash": "^1.1.5",
+    "sharp": "^0.30.7"
   },
   "eslintConfig": {
     "globals": {
