--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "mux-blurhash-example-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mux/blurhash": ">=0.1.0",
-    "@mux/mux-player-react": ">=1.0.0",
-    "next": "12.2.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "18.7.13",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "4.7.4"
-  }
+	"name": "mux-blurhash-example-nextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "prettier --check . && next lint",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"@mux/blurhash": "file:../../packages/blurhash",
+		"@mux/mux-player-react": ">=1.1.0",
+		"next": "12.2.5",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "18.7.13",
+		"@types/react": "^17.0.37",
+		"@types/react-dom": "^17.0.11",
+		"eslint": "8.22.0",
+		"eslint-config-next": "12.2.5",
+		"eslint-config-prettier": "^8.5.0",
+		"prettier": "^2.7.1"
+	}
 }
