--- a/packages/blurhash/package.json
+++ b/packages/blurhash/package.json
@@ -1,50 +1,32 @@
 {
-  "private": true,
-  "name": "@mux/blurhash",
-  "version": "0.1.0",
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "lint": "eslint src/*",
-    "test": "npm run lint",
-    "dev": "tsc --watch",
-    "build": "npm run build:cjs",
-    "build:cjs": "tsc"
-  },
-  "author": "@muxinc",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/sharp": "^0.30.5",
-    "@typescript-eslint/parser": "^5.33.1",
-    "eslint": "8.22.0",
-    "typescript": "4.7.4"
-  },
-  "dependencies": {
-    "blurhash": "^1.1.5",
-    "sharp": "^0.30.7"
-  },
-  "eslintConfig": {
-    "globals": {
-      "globalThis": "writable"
-    },
-    "env": {
-      "browser": true,
-      "es6": true,
-      "mocha": true,
-      "node": true
-    },
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2022,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    }
-  }
+	"private": true,
+	"name": "@mux/blurhash",
+	"version": "0.1.0",
+	"type": "module",
+	"main": "dist/index.js",
+	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"test": "yarn lint",
+		"dev": "tsc --watch",
+		"build": "yarn run build:cjs",
+		"build:cjs": "tsc"
+	},
+	"author": "@muxinc",
+	"license": "MIT",
+	"devDependencies": {
+		"@types/sharp": "^0.30.5",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "8.22.0",
+		"eslint-config-prettier": "^8.3.0",
+		"prettier": "^2.6.2",
+		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"blurhash": "^1.1.5",
+		"sharp": "^0.30.7"
+	}
 }
