Configure gha working dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI
 
 on: [push, pull_request]
 
+defaults:
+  run:
+    working-directory: packages/blurhash
+
 jobs:
   build:
     runs-on: ubuntu-latest
