Does this make gha happy?

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ concurrency: production
 
 defaults:
   run:
-    working-directory: packages/blurhash
+    working-directory: ./packages/blurhash
 
 on:
   # Allows you to run this workflow manually from the Actions tab
