--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ concurrency: production
 
 defaults:
   run:
-    working-directory: ./packages/blurhash
+    working-directory: packages/blurhash
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -39,6 +39,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           # this line is required for the setup-node action to be able to run the npm publish below.
           registry-url: 'https://registry.npmjs.org'
+          cache: yarn
+          cache-dependency-path: packages/blurhash/yarn.lock
       - uses: fregante/setup-git-user@v1
       - run: yarn install --frozen-lockfile
       - run: yarn test
