oh shoot forgot to hit save

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 defaults:
   run:
-    working-directory: ./packages/blurhash
+    working-directory: packages/blurhash
 
 jobs:
   build:
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 16
           cache: yarn
+          cache-dependency-path: packages/blurhash/yarn.lock
       - run: yarn install --frozen-lockfile
       - run: yarn build
 
