--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"dev": "tsc --watch",
 		"build": "yarn run build:cjs",
 		"build:cjs": "tsc",
-		"publish-release": "../scripts/publish.sh"
+		"publish-release": "./scripts/publish.sh"
 	},
 	"repository": {
 		"type": "git",
