--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-	"private": true,
 	"name": "@mux/blurhash",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"type": "module",
 	"main": "dist/index.js",
 	"module": "dist/index.js",
@@ -13,7 +12,7 @@
 		"dev": "tsc --watch",
 		"build": "yarn run build:cjs",
 		"build:cjs": "tsc",
-		"publish-release": "../scripts/publish.sh"
+		"publish-release": "./scripts/publish.sh"
 	},
 	"repository": {
 		"type": "git",
