--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -11,7 +11,7 @@
 	},
 	"dependencies": {
 		"@mux/blurhash": "file:../../",
-		"@mux/mux-player-react": ">=1.1.0",
+		"@mux/mux-player-react": "^1.2.0",
 		"next": "12.2.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
