--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@mux/blurhash": "file:../../",
+		"@mux/mux-player": "^2.2.0",
 		"@mux/mux-player-react": ">=1.1.0",
 		"next": "12.2.5",
 		"react": "^17.0.2",
